Wrapping up 1080p site
- Removed unused content files
- Uploaded and added new hero video for index hero section
- Finished up the about page's switching color
- Started on responsive design for index page, more pages to follow

--- a/Splitwise.html
+++ b/Splitwise.html
@@ -25,7 +25,7 @@
                 <div class="nav-grid-text grid nav-button add-gutters">
                     <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                     <a href="about.html" class="nav-item">About</a>
-                    <a href="https://drive.google.com/file/d/17LMb8DhY5Witah1SeAFqrNYRx8uPrs1-/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
+                    <a href="https://drive.google.com/file/d/17OchuMNCaB25i6yf3QYvr14KSTwDGREo/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
                 </div>
 
             </nav>
@@ -80,11 +80,12 @@
             <section class="project-analysis grid two-col-project-grid add-gutters"> 
                 <div class="text-container">
                     <h3>Research</h3>
-                    <p>To start our research for the app, we first looked at the app itself, studying its existing design system and interaction. Afterwards, each of us conducted secondary research online to find potential problems with Splitwise currently, this would help us narrow down our scope and assist us with identifying what we wanted to look at during our primary research being user interviews and observing users interacting with the app. The secondary research we conducted hinted at the potential friction between users as Splitwise uses the trust system to manage people's expenses which could strain their in-person relationship</p>
+                    <p>To start our research for the app, we first looked at the app itself, studying its existing design system and interaction. Afterwards, each of us conducted secondary research online to find potential problems with Splitwise currently, this would help us narrow down our scope and assist us with identifying what we wanted to look at during our primary research being user interviews and observing users interacting with the app.</p>
+                    <p>These secondary research hinted at the potential friction between users as Splitwise relies on the trust system to manage people's expenses which could strain their in-person relationship.</p>
                 </div>
                 <div class="project-quotes">
                     <h4>"I am <span>two degrees of separation away from a woman who lost an entire friendship group</span> because she clicked “settle up” on Splitwise after a holiday but never actually made the bank transfer, and doubled down when she got found out."</h4>
-                    <p>— The Guardian, 2023</p>
+                    <p>— The Guardian's review of Splitwise, 2023</p>
                 </div>
             </section>
 
