--- a/about.html
+++ b/about.html
@@ -18,36 +18,51 @@
 <body>
     <header class="about-page">
         <nav class="grid nav-grid-master about-page">
-            <a href="index.html" class="nav-item logo-text">
+            <a href="index.html" class="nav-item logo-text about-page">
                 Luke Do
             </a>
             <div class="nav-grid-text grid nav-button add-gutters">
-                <a href="index.html#Featured_Project" class="nav-item">Projects</a>
-                <a href="about.html" class="nav-item">About</a>
-                <a href="https://drive.google.com/file/d/17LMb8DhY5Witah1SeAFqrNYRx8uPrs1-/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
+                <a href="index.html#Featured_Project" class="nav-item about-page">Projects</a>
+                <a href="about.html" class="nav-item about-page">About</a>
+                <a href="https://drive.google.com/file/d/17OchuMNCaB25i6yf3QYvr14KSTwDGREo/view?usp=sharing" class="nav-item about-page" target="_blank">Resume</a>
             </div>
 
         </nav>
-        <section class="grid main-banner main-banner-2c add-gutters">
-            <!-- left -->
-            <div class="left-banner about-page" id="hero-text">
-                <h4 class="about-page">Hello there,</h4>
-                <h1 class="about-page reveal-text">Luke is (not) a gamer, photography nerd, cat/anime enjoyer and music enthusiast, <a href="about.html" class="in-text-link about-page" id="banner-text"> by night.</a></h1>
-                <p class="about-page">Currently playing Xenoblade Chronicles 3, Yakuza series and Honkai Star Rail</p>
-                <p class="about-page">Listening to Citypop, J-pop and other random genres</p>
-                <p class="about-page">Procrastinating on editing his own photos :D</p>
-                <p class="about-page" id="arrow-down">↓</p>
+        <section class="main-banner">
+            <div class="grid main-banner-2c add-gutters">
+                <div class="left-banner">
+                    <h4 class="about-page">Hi there,</h4>
+                </div>
+                <div class="right-banner">
+                </div>
             </div>
-            <!-- right -->
-            <div class="about-img">
+            <div class="grid main-banner-2c add-gutters">
+                <div class="left-banner">
+                    <h1 class="about-page">Luke is (not) a gamer, photography nerd, audiophile, cat owner, anime enjoyer and music enthusiast, <a href="index.html" class="in-text-link about-page" id="banner-text"> by night.</a></h1>
+                </div>
+                <div class="right-banner">
+                    <p class="about-page">Currently playing Xenoblade Chronicles 3, Yakuza series and Honkai Star Rail</p>
+                    <p class="about-page">Listening to Citypop, J-pop and other random genres</p>
+                    <p class="about-page">Procrastinating on editing his own photos :D</p>
+                </div>
+            </div>
+            <!-- Might add video/photo here, need to think of what to add -->
+            <!-- <div id="hero-video">
+                <video class="lazy js-off" width="1920" height="1080" data-src="img\aboutMe\HeroVid.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"> </video>
+            </div> -->
+        </section>
+    </header>
 
-                <figure>
+    <main class="main-about-page">
+        <section class="main-banner">
+            <div class="grid main-banner-2c add-gutters about-img left-banner">
+                <figure class="main-about-page">
                     <img alt="Luke Do's Bio Photo" class="lazy js-off" src="img\aboutMe\cameraPhoto_100.png"
                     data-src="img\aboutMe\cameraPhoto_400.png"
                     data-srcset="img\aboutMe\cameraPhoto_400.png 400w,
-                                 img\aboutMe\cameraPhoto_800.png 800w,
-                                 img\aboutMe\cameraPhoto_ 1080.png 1080w"
-                    data-sizes="100w" width="1024">
+                                img\aboutMe\cameraPhoto_800.png 800w,
+                                img\aboutMe\cameraPhoto_ 1080.png 1080w"
+                    data-sizes="100w" width="1080">
                     <noscript>
                         <img src="img\aboutMe\cameraPhoto_100.png" alt="Luke Do's Bio Photo"
                             srcset="img\aboutMe\cameraPhoto_400.png 400w,
@@ -55,40 +70,18 @@
                                     img\aboutMe\cameraPhoto_ 1080.png 1080w"
                             sizes="(min-width: 74rem) 50vw, 100vw" width="1080" height="1080">
                     </noscript>
-                </figure> 
+                </figure>    
+                <div class="about-bio right-banner">
+                    <h2>A brief blurb about myself</h2>
+
+                    <p>Hi! I'm Luke and I'm a Product UI/UX Designer who believe that <span> design can be a subtle yet impactful way to craft meaningful connections between people and the world around them through blending narratives, functionalities and overall commitment to social good.</span></p>
+
+                    <p>Recently graduated from <a href="https://www.sfu.ca/siat.html" class="in-text-link" target="_blank">The School of Interactive Arts and Technology</a>, I have experience working at the <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">SFU Summer Festival</a> as their social media coordinator and graphic designer. I have also worked at <a href="https://www.fraserhealth.ca/" class="in-text-link">Fraser Health</a> as a Digital Media Communication Specialist where I designed various graphics to advocate for Indigenous Health across the lower mainland.</p>
+
+                    <p>Outside of design, you can often find me pursuing photography (<em>don't mind me just plugging my <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram here</a></em>), playing video games (My favorite game series currently are JRPGs such as Xenoblade Chronicles 3, <a href="https://infinitewealth.sega.com/" class="in-text-link" target="_blank">The Yakuza Series</a> and <a href="https://hsr.hoyoverse.com/en-us/" class="in-text-link" target="_blank">Honkai Star Rail</a>), or watching Japanese Anime (my favorite in recent time was <a href="https://anilist.co/anime/153152/Boku-no-Kokoro-no-Yabai-Yatsu/" class="in-text-link" target="_blank">The Dangers in My Heart</a>).</p>
+                </div>
             </div>
-        </section> 
-    </header>
-
-    <main>
-        <div class="separating-line"></div>
-
-        <div class="grid about-me-2c">
-            <figure class="about-img">
-                <img alt="Luke Do's Bio Photo" class="lazy js-off" src="img\aboutMe\cameraPhoto_100.png"
-                data-src="img\aboutMe\cameraPhoto_400.png"
-                data-srcset="img\aboutMe\cameraPhoto_400.png 400w,
-                             img\aboutMe\cameraPhoto_800.png 800w,
-                             img\aboutMe\cameraPhoto_ 1080.png 1080w"
-                data-sizes="100w" width="1024">
-                <noscript>
-                    <img src="img\aboutMe\cameraPhoto_100.png" alt="Luke Do's Bio Photo"
-                        srcset="img\aboutMe\cameraPhoto_400.png 400w,
-                                img\aboutMe\cameraPhoto_800.png 800w,
-                                img\aboutMe\cameraPhoto_ 1080.png 1080w"
-                        sizes="(min-width: 74rem) 50vw, 100vw" width="1080" height="1080">
-                </noscript>
-            </figure> 
-            <div class="about-bio">
-                <h1>About me</h1>
-
-                <p>Hi! I'm Luke and I'm a Product and UI/UX Designer who enjoys exploring different ways of breathing in life into what would otherwise be a static image to enhance people's day to day experience. <span>I believe that design can be a subtle yet impactful way to craft meaningful connections between people and the world around them through blending narratives, functionalities and overall commitment to social good.</span></p>
-
-                <p>Recently graduated from <a href="https://www.sfu.ca/siat.html" class="in-text-link" target="_blank">The School of Interactive Arts and Technology</a>, I have been volunteering at the <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">SFU Summer Festival</a> as their social media coordinator and graphic designer. I have also worked at <a href="https://www.fraserhealth.ca/" class="in-text-link">Fraser Health</a> as a Digital Media Communication Specialist where I designed various graphics to advocate for Indigenous Health across the lower mainland.</p>
-
-                <p>Outside of design, you can often find me pursuing photography (<em>don't mind me just plugging my <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram here</a></em>), playing video games (My favorite game series currently are <a href="https://infinitewealth.sega.com/" class="in-text-link" target="_blank">The Yakuza Series</a> and <a href="https://hsr.hoyoverse.com/en-us/" class="in-text-link" target="_blank">Honkai Star Rail</a>), or watching Japanese Anime (my favorite in recent time was <a href="https://anilist.co/anime/153152/Boku-no-Kokoro-no-Yabai-Yatsu/" class="in-text-link" target="_blank">The Dangers in My Heart</a>).</p>
-            </div>
-        </div>
+        </section>
     </main>
 
     <footer>
