--- a/icebreaker.html
+++ b/icebreaker.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
-    <title>SFU Anime 2021 Icebreaker | Luke Do</title>
+    <title>SFU Anime Icebreaker | Luke Do</title>
 
     <link href="css/main_work.css" rel="stylesheet">
 
@@ -25,7 +25,7 @@
                 <div class="nav-grid-text grid nav-button add-gutters">
                     <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                     <a href="about.html" class="nav-item">About</a>
-                    <a href="https://drive.google.com/file/d/17LMb8DhY5Witah1SeAFqrNYRx8uPrs1-/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
+                    <a href="https://drive.google.com/file/d/17OchuMNCaB25i6yf3QYvr14KSTwDGREo/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
                 </div>
 
             </nav>
