--- a/index.html
+++ b/index.html
@@ -25,51 +25,26 @@
             <div class="nav-grid-text grid nav-button add-gutters">
                 <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                 <a href="about.html" class="nav-item">About</a>
-                <a href="https://drive.google.com/file/d/17LMb8DhY5Witah1SeAFqrNYRx8uPrs1-/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
+                <a href="https://drive.google.com/file/d/17OchuMNCaB25i6yf3QYvr14KSTwDGREo/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
             </div>
 
         </nav>
-        <!-- <section class="grid main-banner">
-            <div class="left-banner" id="hero-text">
-                <h4>Hi there,</h4>
-                <h1 class="reveal-text">Luke is a product designer who brings static images to life, enhancing people's daily experiences, <a href="about.html" class="in-text-link" id="banner-text"> by day.</a></h1>
-                <p>Currently @AnimeTrending+</p>
-                <p>Previously @Fraser Health and @SFU Summer Festival</p>
-                <p>Based in Vancouver, BC</p>
-                <p id="arrow-down">↓</p>
+        <section class="grid main-banner">
+            <h4>Hi there,</h4>
+            <div class="grid main-banner-2c add-gutters">
+                <div class="left-banner">
+                    <h1>Luke is a product designer who brings static images to life through motion and interactive design, <a href="about.html" class="in-text-link" id="banner-text"> by day.</a></h1>
+                </div>
+                <div class="right-banner">
+                    <p>Currently <span>@AnimeTrending+</span></p>
+                    <p>Previously <span>@Fraser Health and @SFU Summer Festival</span></p>
+                    <p>Based in Vancouver, BC</p> 
+                </div>
             </div>
-        </section> -->
-        <section class="grid main-banner main-banner-2c add-gutters">
-            <!-- left -->
-            <div class="left-banner" id="hero-text">
-                <h4>Hi there,</h4>
-                <h1 class="reveal-text">Luke is a product designer who brings static images to life, enhancing people's daily experiences, <a href="about.html" class="in-text-link" id="banner-text"> by day.</a></h1>
-                <p>Currently @AnimeTrending+</p>
-                <p>Previously @Fraser Health and @SFU Summer Festival</p>
-                <p>Based in Vancouver, BC</p>
-                <p id="arrow-down">↓</p>
+            <div id="hero-video">
+                        <video class="lazy js-off" width="1920" height="960" data-src="img\aboutMe\HeroVid.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"> </video>
             </div>
-            <!-- right -->
-            <div class="about-img">
-                <!-- place holder for video showcase -->
-                <figure>
-                    <img alt="Luke Do's Bio Photo" class="lazy js-off" src="img\aboutMe\cameraPhoto_100.png"
-                    data-src="img\aboutMe\cameraPhoto_400.png"
-                    data-srcset="img\aboutMe\cameraPhoto_400.png 400w,
-                                 img\aboutMe\cameraPhoto_800.png 800w,
-                                 img\aboutMe\cameraPhoto_ 1080.png 1080w"
-                    data-sizes="100w" width="1024">
-                    <noscript>
-                        <img src="img\aboutMe\cameraPhoto_100.png" alt="Luke Do's Bio Photo"
-                            srcset="img\aboutMe\cameraPhoto_400.png 400w,
-                                    img\aboutMe\cameraPhoto_800.png 800w,
-                                    img\aboutMe\cameraPhoto_ 1080.png 1080w"
-                            sizes="(min-width: 74rem) 50vw, 100vw" width="1080" height="1080">
-                    </noscript>
-                    <!-- <video class="lazy js-off" width="840" height="835" data-src="img\otherProjects\KAFU.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"> </video> -->
-                </figure> 
-            </div>
-        </section> 
+        </section>
     </header>
 
     <main>
@@ -82,10 +57,11 @@
 
             <!-- First Row -->               
             <div class="scroll-reveal container down active">
-                <div class="grid featured-project">
+                <div class="grid featured-project add-gutters">
                     <!-- left side -->
                     <div class="project-details project-item">
                         <a href="88rising.html">
+                            <div class="project-img static-img">
                             <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\88risingMockUp_100.jpg"
                             data-src="img\88rising\88risingMockUp_400.jpg"
                             data-srcset="img\88rising\88risingMockUp_400.jpg 400w,
@@ -100,16 +76,17 @@
                                 sizes="(min-width: 74rem) 50vw, 100vw"
                                 >
                             </noscript>
+                            </div>
                         </a>
                         <div class=" grid two-col-project-grid">
-                            <h3>88rising</h3>
+                            <h3 class="left-align-content">88rising</h3>
                             <p class="project-type right-align-text">EXPERIENCE DESIGN. UX. UI</p>
                         </div>
-                        <p class="project-description">A reimagined digital experience to assist fans in discovering and supporting emerging artists.</p> 
-                        <a href="88rising.html" class="label-button">View Project →</a>
+                        <p class="project-description left-align-content">A reimagined digital experience to assist fans in discovering and supporting emerging artists.</p> 
+                        <a href="88rising.html" class="label-button left-align-content">View Project →</a>
                     </div>
                     <!-- right side -->
-                    <div class="project-details project-item">
+                    <div class="project-details project-item project-img static-img">
                         <a href="fureverhome.html">
                             <img alt="FurEverHome Thumbnail image" class="lazy js-off" src="img\fureverhome\FureverhomeThumbnail_100.jpg"
                             data-src="img\fureverhome\FureverhomeThumbnail_400.jpg"
@@ -138,7 +115,7 @@
 
             <!-- Second Row -->     
             <div class="scroll-reveal container down active">
-                <div class="grid featured-project">
+                <div class="grid featured-project add-gutters">
                     <!-- left side -->
                     <div class="project-details project-item">
                         <a href="summerfest.html">
@@ -174,7 +151,7 @@
                     <!-- right side -->
                     <div class="project-details project-item">
                         <a href="Splitwise.html">
-                            <div class="project-img static-img project-item ">
+                            <div class="project-img static-img">
                                 <figure>
                                     <img alt="Splitiwse Thumbnail image" class="lazy js-off" src="img\Splitwise\SplitwiseThumbnail_100.jpg"
                                     data-src="img\Splitwise\SplitwiseThumbnail_400.jpg"
@@ -205,7 +182,7 @@
 
             <!-- Third Row -->
             <div class="scroll-reveal container down active">
-                <div class="grid featured-project">
+                <div class="grid featured-project add-gutters">
                     <!-- left side -->
                     <div class="project-details project-item">
                         <a href="icebreaker.html">
@@ -237,20 +214,20 @@
                     </div>
                     <!-- right side -->
                     <div class="project-details project-item">
-                        <a href="Splitwise.html">
+                        <a href="#">
                             <div class="project-img static-img project-item ">
                                 <figure>
-                                    <img alt="Splitiwse Banner image" class="lazy js-off" src="img/Splitwise/Splitwise_banner_100.png"
-                                    data-src="img/Splitwise/Splitwise_banner_400.png"
-                                    data-srcset="img/Splitwise/Splitwise_banner_400.png 400w,
-                                                 img/Splitwise/Splitwise_banner_800.png 800w,
-                                                 img/Splitwise/Splitwise_banner_1080.png 1080w"
+                                    <img alt="Passion Projects Banner image" class="lazy js-off" src="img\otherProjects\PassionThumbnail_100.jpg"
+                                    data-src="img\otherProjects\PassionThumbnail_400.jpg"
+                                    data-srcset="img\otherProjects\PassionThumbnail_400.jpg 400w,
+                                                 img\otherProjects\PassionThumbnail_800.jpg 800w,
+                                                 img\otherProjects\PassionThumbnail_1080.jpg 1080w"
                                     data-sizes="100w">
                                     <noscript>
-                                        <img src="img/Splitwise/Splitwise_banner_400.png" alt="Splitiwse Banner image"
-                                        srcset="img/Splitwise/Splitwise_banner_400.png 400w,
-                                                img/Splitwise/Splitwise_banner_800.png 800w,
-                                                img/Splitwise/Splitwise_banner_1080.png 1080w" 
+                                        <img src="img\otherProjects\PassionThumbnail_400.jpg" alt="Passion Projects Banner image"
+                                        srcset="img\otherProjects\PassionThumbnail_400.jpg 400w,
+                                                img\otherProjects\PassionThumbnail_800.jpg 800w,
+                                                img\otherProjects\PassionThumbnail_1080.jpg 1080w" 
                                         sizes="(min-width: 74rem) 50vw, 100vw"
                                         >
                                     </noscript>
