updated site with 768 (tablet size) responsive design
- renamed some classes to help with responsive css
- 320/mobile size to go

--- a/Splitwise.html
+++ b/Splitwise.html
@@ -284,7 +284,7 @@
                 <p>Through working on this project, I have gained experience with working with an existing visual and interaction design system. It has also reaffirmed the importance of designing for actual users' needs and not simply using assumptions from the design team! I've also gotten a preview into how current UX and product designer would constantly ideate and develop new ideas to further improve their products to elevate the end user's experience</p>
             </section>
 
-            <section class="grid two-col-project-grid" id="bottom-nav">
+            <section class="grid two-col-bottomnav-grid" id="bottom-nav">
                 <div id="bottom-nav-left">
                     <a class="in-text-link label-button" href="index.html">← Home</a>
                 </div>
