--- a/fureverhome.html
+++ b/fureverhome.html
@@ -384,7 +384,7 @@
                 <p>I've also gained a better understanding of the importance of qualitative research and its differences from quantitative and secondary research. I also learned how to create interview questions that <span>don't lead the interviewee and encourage them to provide detailed and natural responses</span>. Furthermore, I gotten more experience of collaborating within a team when developing a mobile application, especially keeping each other informed, and most importantly working together to overcome challenges we encountered <span>basing our decisions on our research and user’s insights.</span></p>
             </section>
 
-            <section class="grid two-col-project-grid" id="bottom-nav">
+            <section class="grid two-col-bottomnav-grid" id="bottom-nav">
                 <div id="bottom-nav-left">
                     <a class="in-text-link label-button" href="index.html">← Home</a>
                 </div>
