--- a/icebreaker.html
+++ b/icebreaker.html
@@ -283,7 +283,7 @@
                 <p>However, looking back, I would have loved to try out more methods of animation within After Effects as the puppet pin tool that I used have limitations on how it can be used as the puppet pin tool distort the layer in order to simulate animation and might not be applicable with every situation.</p>
             </section>
 
-            <section class="grid two-col-project-grid" id="bottom-nav">
+            <section class="grid two-col-bottomnav-grid" id="bottom-nav">
                 <div id="bottom-nav-left">
                     <a class="in-text-link label-button" href="index.html">← Home</a>
                 </div>
