--- a/summerfest.html
+++ b/summerfest.html
@@ -315,7 +315,7 @@
                     </figure> 
                 </div>
             </section>
-            <section class="grid two-col-project-grid" id="bottom-nav">
+            <section class="grid two-col-bottomnav-grid" id="bottom-nav">
                 <div id="bottom-nav-left">
                     <a class="in-text-link label-button" href="index.html">← Home</a>
                 </div>
