--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             </noscript>
                             </div>
                         </a>
-                        <div class=" grid two-col-project-grid">
+                        <div class=" grid two-col-index-grid">
                             <h3 class="left-align-content">88rising</h3>
                             <p class="project-type right-align-text">EXPERIENCE DESIGN. UX. UI</p>
                         </div>
@@ -103,7 +103,7 @@
                                 >
                             </noscript>
                         </a>
-                        <div class=" grid two-col-project-grid">
+                        <div class=" grid two-col-index-grid">
                             <h3>FurEverHome</h3>
                             <p class="project-type right-align-text">UX. UI. PROTOTYPING</p>
                         </div>
@@ -141,7 +141,7 @@
                                 </figure> 
                             </div>
                         </a>
-                        <div class="grid two-col-project-grid">
+                        <div class="grid two-col-index-grid">
                             <h3>The SFU Summer Festival</h3>
                             <p class="project-type right-align-text">MOTION/GRAPHIC DESIGN. SOCIAL MEDIA</p>
                         </div>
@@ -170,7 +170,7 @@
                                 </figure> 
                             </div>
                         </a>
-                        <div class=" grid two-col-project-grid">
+                        <div class=" grid two-col-index-grid">
                             <h3>Splitwise</h3>
                             <p class="project-type right-align-text">UX. UI. PROTOTYPING</p>
                         </div>
@@ -205,7 +205,7 @@
                                 </figure> 
                             </div>
                         </a>
-                        <div class=" grid two-col-project-grid">
+                        <div class=" grid two-col-index-grid">
                             <h3>SFU Anime Icebreaker</h3>
                             <p class="project-type right-align-text">MOTION DESIGN. CHARACTER ANIMATION</p>
                         </div>
@@ -234,7 +234,7 @@
                                 </figure> 
                             </div>
                         </a>
-                        <div class=" grid two-col-project-grid">
+                        <div class=" grid two-col-index-grid">
                             <h3>Side/Passion Projects</h3>
                             <p class="project-type right-align-text">MOTION DESIGN. GRAPHIC DESIGN. PHOTOGRAPHY</p>
                         </div>
