Preliminary responsiveness for 320 and small fixes for content

--- a/Splitwise.html
+++ b/Splitwise.html
@@ -71,7 +71,7 @@
 
         <main>
             <div class="separating-line"></div>
-            <section class="project-analysis text-container">
+            <section class="project-analysis text-container" id="overview">
                 <h2>Overview</h2>
                 <p>This is a project for an Senior Interaction Design university course that aims to familiarise ourselves with working on an existing design system before developing a new design system in a later project with <a href="fureverhome.html" class="in-text-link">Fureverhome</a>. My team and I were assigned to research and create a new feature for <a href="https://www.splitwise.com/" class="in-text-link" target="_blank">Splitwise</a>, a payment app that automatically calculates multiple bills and splits expenses for a group of people.</p>
                 <a href="Splitwise.html#solution" class="label-button" id="solution-button">Jump to implemented feature ↓</a>
