--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <h4 class="about-page">Hi there,</h4>
             <div class="grid main-banner-2c add-gutters">
                 <div class="left-banner">
-                    <h1 class="about-page">Luke is (not) a gamer, photography nerd, audiophile, cat owner, anime enjoyer and music enthusiast, <a href="index.html" class="in-text-link about-page" id="banner-text"> by night.</a></h1>
+                    <h1 class="about-page">Luke is (not) a gamer, photography nerd, cat owner, anime enjoyer and music enthusiast, <a href="index.html" class="in-text-link about-page" id="banner-text"> by night.</a></h1>
                 </div>
                 <div class="right-banner">
                     <p class="about-page">Currently playing Xenoblade Chronicles 3, Yakuza series and Honkai Star Rail</p>
