--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="right-banner">
                     <p>Currently <span>@AnimeTrending+</span></p>
-                    <p>Previously <span>@Fraser Health and @SFU Summer Festival</span></p>
+                    <p>Previously @Fraser Health and @SFU Summer Festival</p>
                     <p>Based in Vancouver, BC</p> 
                 </div>
             </div>
