--- a/fureverhome.html
+++ b/fureverhome.html
@@ -71,7 +71,7 @@
 <!-- Reminder to add in border to the light theme img to make it easier to see -->
         <main>
             <div class="separating-line"></div>
-            <section class="project-analysis text-container">
+            <section class="project-analysis text-container" id="overview">
                 <h2>Background</h2>
                 <p>After studying the principles, and heuristics of Interface Design, FurEverHome was created in a group of four as a platform to support new and prospective rescued dog owners in their journey with their beloved furry friends. Utilizing Figma over 6 weeks, I was primarily responsible for user research and testing, creating different iterations and features of the UI as well as prototyping a fully working prototype of one of our experience flows in the application. </p>
                 <a href="fureverhome.html#solution" class="label-button" id="solution-button">Jump to proposed application ↓</a>
@@ -260,7 +260,7 @@
 
                     <figure class="project-img static-img figure-analysis">
                         <img alt="User Testing Results" class="lazy js-off" src="img\fureverhome\Interviews_100.jpg"
-                        data-src="img\fureverhome\Interviews_400.jpg"
+                        data-src="img\fureverhome\Interviews_100.jpg"
                         data-srcset="img\fureverhome\Interviews_400.jpg 400w,
                                      img\fureverhome\Interviews_800.jpg 600w,
                                      img\fureverhome\Interviews_1080.jpg 1080w"
