Added support for 1440p
- Added support for 1440
- Minor bug changes and added highlight to quote texts

--- a/Splitwise.html
+++ b/Splitwise.html
@@ -229,7 +229,7 @@
             </section>
 
             <section class="project-analysis">
-                <div class="grid two-col-project-grid add-gutter align-top">
+                <div class="grid two-col-project-grid add-gutters align-top">
                     <div class="text-container">
                         <h3>Final Interactive Prototype</h3>
                         <p>When making the final prototype in Figma, I wanted to showcase the different scenarios that users might go through and as such I suggested to my team to create 3 different flows and created screens for Alex's POV which can be seen through the videos below or through the <a href="https://www.figma.com/proto/g1tXkHHChjyNEs63AG7rjh/Splitwise-Feature-Design-(public)?page-id=321%3A1562&type=design&node-id=555-1812&viewport=-468%2C-86%2C0.27&t=UmL2dw9ue8BygXPA-1&scaling=scale-down&starting-point-node-id=555%3A1812&show-proto-sidebar=1&mode=design" class="in-text-link" target="_blank">interactive prototype!</a></p>
@@ -239,7 +239,7 @@
                         <p class="caption-analysis">Use <strong><span>fullscreen</span></strong> for the best experience of the prototype.</p>
                     </div>
                 </div>
-                <div class="grid two-col-project-grid add-gutter">
+                <div class="grid two-col-project-grid add-gutters">
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/Splitwise/prototype_2phones.webm" src="img/Splitwise/SplitwisePrototype_100.png" autoplay loop playsinline muted aria-label="Splitwise's settling up and 2 way verification prototype"></video>
                         <img alt="Splitwise's settling up and 2 way verification prototype"class="lazy js-off" src="img/Splitwise/SplitwisePrototype_100.png"
