--- a/fureverhome.html
+++ b/fureverhome.html
@@ -95,9 +95,9 @@
                     <p>These interviews pointed to the general mindset of online information being sufficient but preferred hearing stories from experienced pet owners for specific insights. Common issues faced by pet owners include health, hygiene, and behavioral concerns with their pets, while common reasons for adopting pets include companionship, a love for animals, and a desire to practice caregiving.</p>
                 </div>
                 <div class="project-quotes">
-                    <h4>"I have heard that rescued animals don’t live as long because of their trauma but I’m not sure how true it is."</h4>
+                    <h4>"I have heard that rescued animals don’t live as long because of their trauma but I’m <span>not sure how true it is.</span>"</h4>
                     <p>— An interviewee who previously bought his dog from a breeder</p>
-                    <h4>"Not everyone can comfortably communicate with other people but with pets they can express themselves easier."</h4>
+                    <h4>"Not everyone can comfortably communicate with other people but <span>with pets they can express themselves easier.</span>"</h4>
                     <p>— An interviewee who has bought and adopted pets in the past</p>
                 </div>
             </section>
