--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<!-- Reminder to make the nav into borgor on mobile -->
+<!-- Reminder to make the nav into borgor on mobile also increase the margins between the project descriptions in index-->
 <body>   
     <header>
         <nav class="grid nav-grid-master">
