Added Side Projects files and Fraser Health case study
- Uploaded webm, pngs of side projects

- Uploaded Fraser health content and made content page

- Shifted SFU Ani Icebreaker to replace passion project for now, will add in another section for it again

--- a/Splitwise.html
+++ b/Splitwise.html
@@ -289,7 +289,7 @@
                     <a class="in-text-link label-button" href="index.html">← Home</a>
                 </div>
                 <div id="bottom-nav-right">
-                    <a class="right-align-text in-text-link label-button" href="icebreaker.html">Next Project: SFU Anime Icebreaker →</a>
+                    <a class="right-align-text in-text-link label-button" href="fraserhealth.html">Next Project: Fraser Health ICS →</a>
                 </div>
             </section>
 
