--- a/about.html
+++ b/about.html
@@ -40,10 +40,6 @@
                     <p class="about-page">Procrastinating on editing his own photos :D</p>
                 </div>
             </div>
-            <!-- Might add video/photo here, need to think of what to add -->
-            <!-- <div id="hero-video">
-                <video class="lazy js-off" width="1920" height="1080" data-src="img\aboutMe\HeroVid.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"> </video>
-            </div> -->
         </section>
     </header>
 
@@ -68,7 +64,7 @@
                 <div class="about-bio right-banner">
                     <h2>A brief blurb about myself</h2>
 
-                    <p>Hi! I'm Luke and I'm a Product UI/UX Designer who believe that <span> design can be a subtle yet impactful way to craft meaningful connections between people and the world around them through blending narratives, functionalities and overall commitment to social good.</span></p>
+                    <p>Hi! I'm Luke and I'm a Product and Graphic Designer who believe that <span> design can be a subtle yet impactful way to craft meaningful connections between people and the world around them through blending narratives, functionalities and overall commitment to social good.</span></p>
 
                     <p>Recently graduated from <a href="https://www.sfu.ca/siat.html" class="in-text-link" target="_blank">The School of Interactive Arts and Technology</a>, I have experience working at the <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">SFU Summer Festival</a> as their social media coordinator and graphic designer. I have also worked at <a href="https://www.fraserhealth.ca/" class="in-text-link">Fraser Health</a> as a Digital Media Communication Specialist where I designed various graphics to advocate for Indigenous Health across the lower mainland.</p>
 
