--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             <h4>Hi there,</h4>
             <div class="grid main-banner-2c add-gutters">
                 <div class="left-banner">
-                    <h1>Luke is a product designer who brings static images to life through motion and interactive design, <a href="about.html" class="in-text-link" id="banner-text"> by day.</a></h1>
+                    <h1>Luke is a creative designer who brings static images to life through motion and interactive design, <a href="about.html" class="in-text-link" id="banner-text"> by day.</a></h1>
                 </div>
                 <div class="right-banner">
-                    <p>Currently <span>@AnimeTrending+</span></p>
+                    <p><span>Currently seeking new opportunities</span></p>
                     <p>Previously @Fraser Health and @SFU Summer Festival</p>
                     <p>Based in Vancouver, BC</p> 
                 </div>
             </div>
             <div id="hero-video">
-                        <video class="lazy js-off" width="1920" height="960" data-src="img\aboutMe\HeroVid.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"> </video>
+                <video class="lazy js-off" width="1920" height="960" data-src="img\aboutMe\HeroVid.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"> </video>
             </div>
         </section>
     </header>
@@ -143,7 +143,7 @@
                         </a>
                         <div class="grid two-col-index-grid">
                             <h3>The SFU Summer Festival</h3>
-                            <p class="project-type right-align-text">MOTION/GRAPHIC DESIGN. SOCIAL MEDIA</p>
+                            <p class="project-type right-align-text">MOTION DESIGN. GRAPHIC DESIGN. SOCIAL MEDIA</p>
                         </div>
                         <p class="project-description">A multimedia voluntary project for The SFU Summer Festival annual convention.</p> 
                         <a href="summerfest.html" class="label-button">View Project →</a>
@@ -184,6 +184,37 @@
             <div class="scroll-reveal container down active">
                 <div class="grid featured-project add-gutters">
                     <!-- left side -->
+
+                    <div class="project-details project-item">
+                        <a href="fraserhealth.html">
+                            <div class="project-img static-img">
+                                <figure>
+                                    <img alt="Fraser Health ICS Thumbnail image" class="lazy js-off" src="img/otherProjects/FraserHealth/FHThumbnail_100.png"
+                                    data-src="img/otherProjects/FraserHealth/FHThumbnail_400.png"
+                                    data-srcset="img/otherProjects/FraserHealth/FHThumbnail_400.png 400w,
+                                                 img/otherProjects/FraserHealth/FHThumbnail_800.png 800w,
+                                                 img/otherProjects/FraserHealth/FHThumbnail_1080.png 1080w"
+                                    data-sizes="100w">
+                                    <noscript>
+                                        <img src="img/otherProjects/FraserHealth/FHThumbnail_400.png" alt="Fraser Health ICS Thumbnail image"
+                                        srcset="img/otherProjects/FraserHealth/FHThumbnail_400.png 400w,
+                                                img/otherProjects/FraserHealth/FHThumbnail_800.png 800w,
+                                                img/otherProjects/FraserHealth/FHThumbnail_1080.png 1080w" 
+                                        sizes="(min-width: 74rem) 50vw, 100vw"
+                                        >
+                                    </noscript>
+                                </figure> 
+                            </div>
+                        </a>
+                        <div class=" grid two-col-index-grid">
+                            <h3>Fraser Health ICS</h3>
+                            <p class="project-type right-align-text">GRAPHIC DESIGN. BRANDING</p>
+                        </div>
+                        <p class="project-description">Learning design and storytelling through hands-on experience to promote Indigenous Cultural Safety.</p> 
+                        <a href="fraserhealth.html" class="label-button">View Project →</a>
+                    </div>
+
+                    <!-- right side -->
                     <div class="project-details project-item">
                         <a href="icebreaker.html">
                             <div class="project-img">
@@ -212,7 +243,42 @@
                         <p class="project-description">Creating a Motion Graphic for the SFU Anime Club's seasonal Club's Day event on social media.</p> 
                         <a href="icebreaker.html" class="label-button">View Project →</a>
                     </div>
-                    <!-- right side -->
+                </div>
+            </div>
+
+            <!-- Fourth Row -->
+            <!-- <div class="scroll-reveal container down active">
+                <div class="grid featured-project add-gutters">
+
+                    <div class="project-details project-item">
+                        <a href="icebreaker.html">
+                            <div class="project-img">
+                                <figure>
+                                    <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"></video>
+                                    <img alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"class="lazy js-off" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg"
+                                    data-src="img/2021_Icebreaker/Spring2021_fallback_400.jpg"
+                                    data-srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
+                                                img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w"
+                                    data-sizes="100w">
+        
+                                    <noscript>  
+                                        <video src="img/2021_Icebreaker/Spring2021.webm" autoplay loop playsinline muted width="1920" height="1080" aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"></video> 
+                                            <img src="img/2021_Icebreaker/Spring2021_fallback_400.jpg" alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"
+                                            srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
+                                                    img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w" 
+                                            sizes="(min-width: 60rem) 50vw, 100vw">
+                                    </noscript>
+                                </figure> 
+                            </div>
+                        </a>
+                        <div class=" grid two-col-index-grid">
+                            <h3>POV: You're a Karamatsu Girl</h3>
+                            <p class="project-type right-align-text">3D MODELLING. 3D ANIMATION. AWARD WINNING</p>
+                        </div>
+                        <p class="project-description">A fanmade 3D Music Video made in Autodesk Maya made for a senior level university course</p> 
+                        <a href="icebreaker.html" class="label-button">View Project →</a>
+                    </div>
+
                     <div class="project-details project-item">
                         <a href="#">
                             <div class="project-img static-img project-item ">
@@ -242,7 +308,7 @@
                         <a href="#" class="label-button">Coming soon 👀!!</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section> 
     </main>
   
