Fixing banner images for 88rising and Fureverhome
- Fixing banner for 88rising due to scaling
-  Fixing banner for Fureverhome due to scaling of the time on the prototype mockups

--- a/88rising.html
+++ b/88rising.html
@@ -30,17 +30,17 @@
                 <section>
                     <div class="project-banner">
                         <figure>
-                            <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\Thumbnail_100.webp"
-                            data-src="img\88rising\Thumbnail_400.webp"
-                            data-srcset="img\88rising\Thumbnail_400.webp 400w,
-                                        img\88rising\Thumbnail_600.webp 600w,
-                                        img\88rising\Thumbnail_1080.webp 1080w"
+                            <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\Rising_banner_100.webp"
+                            data-src="img\88rising\Rising_banner_400.webp"
+                            data-srcset="img\88rising\Rising_banner_400.webp 400w,
+                                        img\88rising\Rising_banner_600.webp 600w,
+                                        img\88rising\Rising_banner_1080.webp 1080w"
                             data-sizes="100w">
                             <noscript>
-                                <img src="img\88rising\Thumbnail_400.webp" alt="88rising Banner image"
-                                srcset="img\88rising\Thumbnail_400.webp 400w,
-                                        img\88rising\Thumbnail_600.webp 600w,
-                                        img\88rising\Thumbnail_1080.webp 1080w" 
+                                <img src="img\88rising\Rising_banner_400.webp" alt="88rising Banner image"
+                                srcset="img\88rising\Rising_banner_400.webp 400w,
+                                        img\88rising\Rising_banner_600.webp 600w,
+                                        img\88rising\Rising_banner_1080.webp 1080w" 
                                 sizes="(min-width: 74rem) 50vw, 100vw"
                                 >
                             </noscript>
